add navbar and pages

--- a/index.html
+++ b/index.html
@@ -7,33 +7,46 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="nav-menu">
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="reading.html">reading</a></li>
+                <li><a href="yoga.html">yoga</a></li>
+                <li><a href="art.html">art</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="box">
-    <div class="row">
-        <div class="header">
-            <h1>My hobbies!</h1>
-            <p>This website is dedicated to celebrating the simple joys and passions that make life more colorful. Here, I share my love for drawing, reading, and yoga—three hobbies that bring balance, creativity, and relaxation to my life. Whether you're an artist, a book lover, or someone looking to find calm through yoga, this space is designed to inspire and encourage others to explore and embrace their own hobbies. Join me in discovering new techniques, ideas, and resources to deepen your hobbies and make time for what truly matters! </p>
-        </div>
-
-         <div class="content"> 
-        <div class="card">
-                <img src="https://images.unsplash.com/photo-1678716518825-56d7ffb1d496?q=80&w=3175&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-                <h3>Reading</h3>
-                <p> Reading is a gateway to countless worlds, ideas, and experiences. It allows me to escape into different realities through fiction, or deepen my understanding of the world with non-fiction. Each book is an opportunity to learn something new—whether it's about history, philosophy, or human nature. Reading has not only helped me develop a broader perspective on life but also provided a constant source of inspiration and relaxation. It's my way of expanding my mind and feeding my curiosity.</p>
+        <div class="row">
+            <div class="header">
+                <h1>My hobbies!</h1>
+                <p>This website is dedicated to celebrating the simple joys and passions that make life more colorful. Here, I share my love for drawing, reading, and yoga—three hobbies that bring balance, creativity, and relaxation to my life...</p>
             </div>
 
-            <div class="card">
-                <img src="https://plus.unsplash.com/premium_photo-1664475512301-8eb630d74412?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-                <h3>Yoga</h3>
-                <p> Yoga has been a transformative practice for me, both physically and mentally. It provides a balance between strength and flexibility, helping me stay fit while calming my mind. It’s a way to slow down, tune into my body, and find a sense of peace amidst the chaos of everyday life. Through regular practice, I’ve found a deeper connection to myself and a more mindful approach to living. Yoga isn’t just a workout; it’s a practice of self-care that nourishes my body, mind, and spirit.</p>
-            </div>
-
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1741037306941-e0a14c293c8c?q=80&w=2992&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-                <h3>Art</h3>
-                <p> Drawing has always been a way for me to express my thoughts and emotions creatively. Whether it's capturing the beauty of nature, illustrating ideas, or simply doodling to relax, it’s a form of self-expression that brings me peace and joy. Through drawing, I can visually communicate what words often can’t, and it’s become a personal outlet for exploring my imagination and developing new skills.</p>
+            <div class="content">
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1678716518825-56d7ffb1d496?q=80&w=3175&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="girl reading a book with a cat next to her">
+                    <h3>Reading</h3>
+                    <p>Reading is a gateway to countless worlds, ideas, and experiences...</p>
+                </div>
+                <div class="card">
+                    <img src="https://plus.unsplash.com/premium_photo-1664475512301-8eb630d74412?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="girl doing yoga with a cat next to her">
+                    <h3>Yoga</h3>
+                    <p>Yoga has been a transformative practice for me...</p>
+                </div>
+                <div class="card">
+                    <img src="https://images.unsplash.com/photo-1741037306941-e0a14c293c8c?q=80&w=2992&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="charcoal drawing of 3 cats">
+                    <h3>Art</h3>
+                    <p>Drawing has always been a way for me to express my thoughts...</p>
+                </div>
             </div>
         </div>
     </div>
-    </div>
+    <footer>
+        <p>&copy; 2025 MyWebsite. All rights reserved.</p>
+    </footer>
 </body>
 </html>
