--- a/art.html
+++ b/art.html
@@ -18,17 +18,41 @@
             </ul>
         </div>
     </nav>
-
     <section class="one">
-        <h1>Welcome to the Art Page</h1>
-        <p>Here you'll find Art content</p>    
-    </section>
+        <h1>🎨 Welcome to the Art Page</h1>  
+        <br>
+        <p>Art is a journey towards self-expression, creativity, and discovery. Art is for everyone so  this page is a celebration of creativity in all its forms.</p>
+        <br>
+        <br>
 
-    <section class="two">
-        <h2>Art Tips and Inspiration</h2>
-        <p>Art is a journey towards self-expression, creativity, and discovery. Whether you're a painter, illustrator, or a digital artist, you can find techniques, inspiration, and resources to help you grow as an artist.</p>
-    </section>
+        <h2>🌟 Why Make Art?</h2>
+        <ul>
+          <li>Its a form of self discovery</li>
+          <li>It relieves stress and grounds you</li>
+          <li>Its fun…seriously</li>
+          <li>You feel a great sense of accomplishment after finishing a piece that you spent a long time on</li>
+        </ul>
+        <br>
+        <h2>🖼️ Featured Artist I Love:</h2>  
+        <p>This month, Im obsessed with Gustav Kilmt, whose dreamy and decorative style and earthy color palette make every piece feel like a poem.</p>
+        <br>
+            <h3> Favorite work:</h3>
+            <p>“The Kiss”</p>
+            <br>
+            <h3>Why I love it:</h3> 
+            <p>It's soft but strong, detailed but not overwhelming.</p>
+            <br>
+            <div class="card 2">
+                <img 
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/The_Kiss_-_Gustav_Klimt_-_Google_Cultural_Institute.jpg/1280px-The_Kiss_-_Gustav_Klimt_-_Google_Cultural_Institute.jpg" 
+                    alt="oil painting of a man and a woman embracing"
+                    style="width: 300px; height: auto;"
+                >
+            </div> 
+            <a href="https://www.youtube.com/watch?v=oQm8Df4UYNw&ab_channel=HamRibArt">🤍 Start Your Journey</a>
+            <p>✨✨✨</p>           
 
+    </section>
     <footer>
         <p>&copy; 2025 MyWebsite. All rights reserved.</p>
     </footer>
