--- a/reading.html
+++ b/reading.html
@@ -18,17 +18,57 @@
             </ul>
         </div>
     </nav>
-
     <section class="one">
-        <h1>Welcome to the Reading Page</h1>
-        <p>Here you'll find reading content</p>    
-    </section>
+        <h1>📚 Welcome to the Reading Page</h1>   
+        <br>
+    <p>Reading is a journey towards knowledge, imagination, and personal growth. Whether you're an avid reader or just starting out, find book recommendations, tips, and inspiration to ignite your love for reading.</p>
+    <br>
+    <br>
+    <br>
 
-    <section class="two">
-        <h2>Reading Tips and Inspiration</h2>
-        <p>Reading is a journey towards knowledge, imagination, and personal growth. Whether you're an avid reader or just starting out, find book recommendations, tips, and inspiration to ignite your love for reading.</p>
-    </section>
-
+    <h1>🧠 The Benefits of Reading:</h1>
+  
+    <ul>
+      <li>Expands vocabulary and thinking</li>
+      <li>Reduces stress and improves focus</li>
+      <li>Sparks creativity and emotional intelligence</li>
+      <li>Deepens understanding across cultures and time</li>
+    </ul>
+    <br>
+    <br>
+  
+    <h2>How to Get Into (or Back Into) Reading</h2>
+    <ul>
+      <li>10-minute daily reading challenges</li>
+      <li>Creating the perfect reading area in your home</li>
+      <li>Audiobooks for commutes and walks</li>
+      <li>Exploring different genres</li>
+    </ul>
+    <br>
+    <br>
+  
+    <h2>🤍 Start with my current reads</h2>
+    <p>✨✨✨</p>
+    <br>
+  
+    <h3>Fiction:</h3>
+    <h4>We Hunt the Flame</h4>
+    <p>by Hafsah Faizal — for lovers of adventure, friendship, and fantasy.</p>
+    <br>
+  
+    <h3>Nonfiction:</h3>
+    <h4>The Autobiography of Malcolm X</h4> 
+    <p>by Malcolm X and Alex Haley — informative, inspiring, and full of insight.</p>
+    <br>
+  
+    <h3>Rereading:</h3>
+    <h4>Brave New World</h4>
+    <p>by Aldous Huxley — all-time favorite that still brings a new perspective.</p>
+    <br>
+    <br>
+  
+</section>
+   <br><br>
     <footer>
         <p>&copy; 2025 MyWebsite. All rights reserved.</p>
     </footer>
