--- a/yoga.html
+++ b/yoga.html
@@ -18,21 +18,43 @@
                 </ul>
             </div>
         </nav>
+        <section class="one">
 
+        <h1>🧘 Welcome to the Yoga Page</h1>  
+        <br>
+        <p>Yoga is a journey towards self-awareness, strength, and flexibility. Whether you're a beginner or an experienced yogi, you can find guidance, practice routines, and inspiration here. Yoga helped me slow down. It reminded me I dont need to "achieve" anything to feel grounded. Through injury, burnout, and big life shifts, yoga became a constant—and I want to share that calm with you.</p>
+        <br>
+        <br>
+        <br>
+    <h2>📝 Free Yoga Journal Prompts</h2>
+    <ul>
+      <li>How do I feel in my body right now?</li>
+      <li>What am I holding onto that I can exhale?</li>
+      <li>What does stillness feel like to me today?</li>
+      <li>What does stillness feel like to me today?</li>
+      <li>What am I grateful for at this moment?</li>
+    </ul>
+    <br>
+    <br>
+  
+    <h2>🧘‍♀️ 5 Yoga Poses I Do at My Desk</h2>
+    <p>Perfect for readers who sit a lot or work from home:</p>
+    <br>
+    <ul>
+      <li>Seated Spinal Twist: Open up your back</li>
+      <li>Neck Rolls: Loosen tightness from screen time</li>
+      <li>Wrist Stretch: Undo that typing tension</li>
+      <li>Forward Fold in Chair: Release lower back</li>
+      <li>3 Deep Breaths: Reset everything</li>
+    </ul>
+    <br>  
+    <a href="https://www.youtube.com/watch?v=0L_YrMcwU3w">🤍 Start Your Journey</a>
+    <p>✨✨✨</p>
 
-    <section class="one">
-        <h1>Welcome to the Yoga Page</h1>
-        <p>Here you'll find Yoga content</p>    
-    </section>
-
-    <section class="two">
-        <h2>Yoga Tips and Inspiration</h2>
-        <p>Yoga is a journey towards self-awareness, strength, and flexibility. Whether you're a beginner or an experienced yogi, you can find guidance, practice routines, and inspiration here.</p>
-    </section>
-
-    <footer>
+</section>
+ <footer>
         <p>&copy; 2025 MyWebsite. All rights reserved.</p>
     </footer>
-
+  
 </body>
 </html>
